fix: make grid fit on smaller screens
also update description

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -24,8 +24,8 @@ h1 {
 #grid {
   display: grid;
   grid-template-rows: repeat(6, 1fr);
-  width: 500px;
-  height: 500px;
+  width: min(100vw, 500px);
+  height: min(100vw, 500px);
   border: 5px solid black;
 }
 
